syntax = "proto3";

package vega.commands.v1;
option go_package = "code.vegaprotocol.io/vega/proto/commands/v1";

import "markets.proto";
import "assets.proto";
import "governance.proto";
import "vega.proto";
import "oracles/v1/oracle_spec.proto";
import "oracles/v1/oracle_data.proto";
import "google/protobuf/wrappers.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

// An order submission is a request to submit or create a new order on Vega
message OrderSubmission {
  // Unique identifier for the order (set by the system after consensus)
  string id = 1 [(validator.field) = {string_not_empty: false}];
  // Market identifier for the order, required field
  string market_id = 2 [(validator.field) = {string_not_empty: true}];
  // Party identifier for the order, required field
  string party_id = 3 [(validator.field) = {string_not_empty: true}];
  // Price for the order, the price is an integer, for example `123456` is a correctly
  // formatted price of `1.23456` assuming market configured to 5 decimal places,
  // , required field for limit orders, however it is not required for market orders
  uint64 price = 4;
  // Size for the order, for example, in a futures market the size equals the number of contracts, cannot be negative
  uint64 size = 5 [(validator.field) = {int_gt: 0}];
  // Side for the order, e.g. SIDE_BUY or SIDE_SELL, required field - See [`Side`](#vega.Side)
  vega.Side side = 6;
  // Time in force indicates how long an order will remain active before it is executed or expires, required field
  // - See [`Order.TimeInForce`](#vega.Order.TimeInForce)
  vega.Order.TimeInForce time_in_force = 7;
  // Timestamp for when the order will expire, in nanoseconds since the epoch,
  // required field only for [`Order.TimeInForce`](#vega.Order.TimeInForce)`.TIME_IN_FORCE_GTT`
  // - See [`VegaTimeResponse`](#api.VegaTimeResponse).`timestamp`
  int64 expires_at = 8;
  // Type for the order, required field - See [`Order.Type`](#vega.Order.Type)
  vega.Order.Type type = 9;
  // Reference given for the order, this is typically used to retrieve an order submitted through consensus, currently
  // set internally by the node to return a unique reference identifier for the order submission
  string reference = 10;
  // Used to specify the details for a pegged order
  // - See [`PeggedOrder`](#vega.PeggedOrder)
  PeggedOrder pegged_order = 11;
}

// An order cancellation is a request to cancel an existing order on Vega
message OrderCancellation {
  // The following three fields are used for lookup of the order only:

  // Unique identifier for the order (set by the system after consensus), required field
  string order_id = 1;
  // Market identifier for the order, required field
  string market_id = 2;
  // Party identifier for the order, required field
  string party_id = 3 [(validator.field) = {string_not_empty: true}];
}

// An order amendment is a request to amend or update an existing order on Vega
message OrderAmendment {
  // The `orderID`, `partyID` and `marketID` fields are used for lookup of the order only and cannot be amended by this command

  // Order identifier, this is required to find the order and will not be updated, required field
  string order_id = 1 [(validator.field) = {string_not_empty : true}];
  // Party identifier, this is required to find the order and will not be updated, required field
  string party_id = 2 [(validator.field) = {string_not_empty: true}];
  // Market identifier, this is required to find the order and will not be updated
  string market_id = 3;

  // All fields below can be altered by this command:

  // Amend the price for the order, if the Price value is set, otherwise price will remain unchanged - See [`Price`](#vega.Price)
  vega.Price price = 4;
  // Amend the size for the order by the delta specified:
  // - To reduce the size from the current value set a negative integer value
  // - To increase the size from the current value, set a positive integer value
  // - To leave the size unchanged set a value of zero
  int64 size_delta = 5;
  // Amend the expiry time for the order, if the Timestamp value is set, otherwise expiry time will remain unchanged
  // - See [`VegaTimeResponse`](#api.VegaTimeResponse).`timestamp`
  vega.Timestamp expires_at = 6;
  // Amend the time in force for the order, set to TIME_IN_FORCE_UNSPECIFIED to remain unchanged
  // - See [`TimeInForce`](#api.VegaTimeResponse).`timestamp`
  vega.Order.TimeInForce time_in_force = 7;
  // Amend the pegged order offset for the order
  google.protobuf.Int64Value pegged_offset = 8;
  // Amend the pegged order reference for the order
  // - See [`PeggedReference`](#vega.PeggedReference)
  vega.PeggedReference pegged_reference = 9;
}
